Testing configuration moved into separate file